@@ -1,4 +1,4 @@
-// $Id: FileHandler.cc,v 1.20 2010/09/09 08:01:16 mommsen Exp $
+// $Id: FileHandler.cc,v 1.21 2010/09/28 16:25:29 mommsen Exp $
 /// @file: FileHandler.cc
 
 #include <EventFilter/StorageManager/interface/Exception.h>
@@ -215,7 +215,7 @@ void FileHandler::moveFileToClosed
   const std::string openFileName(_fileRecord->completeFileName(FilesMonitorCollection::FileRecord::open));
   const std::string closedFileName(_fileRecord->completeFileName(FilesMonitorCollection::FileRecord::closed));
 
-  size_t openFileSize = checkFileSizeMatch(openFileName, fileSize());
+  unsigned long long openFileSize = checkFileSizeMatch(openFileName, fileSize());
 
   makeFileReadOnly(openFileName);
   try
@@ -233,7 +233,7 @@ void FileHandler::moveFileToClosed
 }
 
 
-size_t FileHandler::checkFileSizeMatch(const std::string& fileName, const size_t& size) const
+unsigned long long FileHandler::checkFileSizeMatch(const std::string& fileName, const unsigned long long& size) const
 {
   struct stat64 statBuff;
   int statStatus = stat64(fileName.c_str(), &statBuff);
@@ -264,7 +264,7 @@ size_t FileHandler::checkFileSizeMatch(const std::string& fileName, const size_t
 }
 
 
-bool FileHandler::sizeMismatch(const double& initialSize, const double& finalSize) const
+bool FileHandler::sizeMismatch(const unsigned long long& initialSize, const unsigned long long& finalSize) const
 {
   double pctDiff = calcPctDiff(initialSize, finalSize);
   return (pctDiff > _diskWritingParams._fileSizeTolerance);
@@ -305,11 +305,11 @@ void FileHandler::checkDirectories() const
 }
 
 
-double FileHandler::calcPctDiff(const double& value1, const double& value2) const
+double FileHandler::calcPctDiff(const unsigned long long& value1, const unsigned long long& value2) const
 {
   if (value1 == value2) return 0;
-  double largerValue = std::max(value1,value2);
-  double smallerValue = std::min(value1,value2);
+  unsigned long long largerValue = std::max(value1,value2);
+  unsigned long long smallerValue = std::min(value1,value2);
   return ( largerValue > 0 ? (largerValue - smallerValue) / largerValue : 0 );
 }
 
