@@ -26,6 +26,17 @@
 	* No longer write and handle index files.
 	  Requires IOPool/Streamer V07-00-00 or newer.
 
+2010-11-04 Remi Mommsen <Remigius.Mommsen@cern.ch>
+
+	* tag V06-03-04
+	* Merge unit-test fixes from trunk into branch_3_8_x
+
+2010-11-04 Remi Mommsen <Remigius.Mommsen@cern.ch>
+
+	* tag V06-03-03
+	* Use unsigned long long consistently when checking file sizes in bytes.
+	  Fixes the file size check when file sizes exceed 2 GB.
+
 2010-10-06 Remi Mommsen <Remigius.Mommsen@cern.ch>
 
 	* tag V06-03-02
